# esp-ecl

./: .gitignore  CMakeLists.txt  README.md  TODO.md  install.sh
cmake/: Findesp_aes.cmake  Findesp_cfg.cmake  Findesp_eb.cmake  Findesp_gpio.cmake  Findesp_gpio_debug.cmake  Findesp_json.cmake  Findesp_sdo.cmake  Findesp_tim.cmake  Findesp_util.cmake
examples/: CMakeLists.txt
examples/aes/: CMakeLists.txt  README.md  main.c
examples/blink/: CMakeLists.txt  README.md  main.c
examples/blink_cond/: CMakeLists.txt  README.md  main.c
examples/bus/: CMakeLists.txt  README.md
examples/cfg/: CMakeLists.txt  README.md  main.c
examples/config/: CMakeLists.txt  README.md  main.c
examples/event_bus/: CMakeLists.txt  README.md  main.c
examples/events/: CMakeLists.txt  README.md  main.c
examples/json/: CMakeLists.txt  README.md  main.c
examples/list/: CMakeLists.txt  README.md  main.c
examples/network_manager_client/: CMakeLists.txt  callbacks.c  main.c
examples/nm/: CMakeLists.txt  README.md  callbacks.c  callbacks.h  main.c
examples/tcp_client/: CMakeLists.txt  README.md  callbacks.c  callbacks.h  main.c
examples/timer/: CMakeLists.txt  README.md  main.c
examples/timers/: CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt  README.md  esp_delay.c  esp_gpio_debug.c  esp_sdo.c  esp_util.c
src/cJSON/: CMakeLists.txt  adapt.md  cJSON.c  cJSON_Utils.c
src/cJSON/include/: cJSON.h  cJSON_Esp.h  cJSON_Utils.h
src/config/: CMakeLists.txt  Findconfig.cmake  README.md  config.c
src/config/include/: config.h
src/esp_aes/: CMakeLists.txt  Findesp_aes.cmake  README.md  esp_aes.c
src/esp_aes/include/: esp_aes.h
src/esp_cfg/: CMakeLists.txt  Findesp_cfg.cmake  README.md  esp_cfg.c
src/esp_cfg/include/: esp_cfg.h
src/esp_eb/: CMakeLists.txt  Findesp_eb.cmake  README.md  esp_eb.c  esp_eb.h  esp_eb_internal.h
src/esp_eb/include/: esp_eb.h  esp_eb_internal.h
src/esp_gpio/: CMakeLists.txt  Findesp_gpio.cmake  README.md  esp_gpio.c  esp_gpio.h
src/esp_gpio/include/: esp_gpio.h
src/esp_gpio_debug/: CMakeLists.txt  Findesp_gpio_debug.cmake  README.md  esp_gpio_debug.c
src/esp_gpio_debug/include/: esp_gpio_debug.h
src/esp_json/: CMakeLists.txt  Findesp_json.cmake  README.md  esp_json.c
src/esp_json/include/: esp_json.h
src/esp_nm/: CMakeLists.txt  esp_nm.c  esp_nm_internal.h  esp_nm_list.c  esp_nm_list.h
src/esp_nm/include/: esp_nm.h
src/esp_sdo/: CMakeLists.txt  Findesp_sdo.cmake  README.md  esp_sdo.c
src/esp_sdo/include/: esp_sdo.h
src/esp_tim/: CMakeLists.txt  Findesp_tim.cmake  README.md  esp_tim.c  esp_tim.h
src/esp_tim/include/: esp_tim.h
src/esp_util/: CMakeLists.txt  Findesp_util.cmake  README.md  esp_list.c  esp_list_internal.h  esp_util.c
src/esp_util/include/: esp_list.h  esp_util.h
src/event_bus/: CMakeLists.txt  Findevent_bus.cmake  README.md  event_bus.c  event_bus_internal.h
src/event_bus/include/: event_bus.h
src/gpio_debug/: CMakeLists.txt  Findgpio_debug.cmake  README.md  gpio_debug.c
src/gpio_debug/include/: gpio_debug.h
src/gpio_helper/: CMakeLists.txt  Findgpio_helper.cmake  README.md  gpio_helper.c
src/gpio_helper/include/: gpio_helper.h
src/include/: esp_delay.h  esp_gpio.h  esp_gpio_debug.h  esp_json.h  esp_util.h
src/lists/: CMakeLists.txt  Findlists.cmake  README.md  lists.c  lists_internal.h
src/lists/include/: lists.h
src/nework_manager/: CMakeLists.txt  Findnetwork_manager.cmake  README.md  network_manager.c  nm.c  nm_internal.h  nm_tcp.c  nm_tcp.h  nm_wifi.c  nm_wifi.h  tcp.c  wifi.c
src/nework_manager/include/: network_manager.h  nm.h  nm_tcp.h  nm_wifi.h  tcp.h  wifi.h
src/nm/: CMakeLists.txt  internal.h  nm.c  nm_tcp.c  nm_tcp.h  nm_wifi.c  nm_wifi.h
src/nm/include/: nm.h
src/stdout/: CMakeLists.txt  Findstdout.cmake  README.md  stdout.c
src/stdout/include/: stdout.h
src/timers/: CMakeLists.txt  Findtimers.cmake  README.md  timers.c  timers_internal.h
src/timers/include/: timers.h
src/utils/: CMakeLists.txt  Findutils.cmake  README.md  list.c  utils.c
src/utils/include/: utils.h
